@@ -42,6 +42,8 @@ admin.php
 + _FMCONTENT_TOPIC_NUM
 + _FMCONTENT_MSG_ALIASERROR
 
+* _FMCONTENT_TOPIC_ONLINE
+
 modinfo.php
 + _FMCONTENT_HOMEPAGE 
 + _FMCONTENT_HOMEPAGE_DESC 
